--- a/src/components/DetailsProduct/DetailProduct.css
+++ b/src/components/DetailsProduct/DetailProduct.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Prompt&family=Roboto:wght@300&family=Varela+Round&display=swap');
+
+.detail-page{
+    margin: auto 8rem;
+    max-width: 100rem
+}
+
 .detail-li{
     color: rgb(110, 110, 110);
     margin-left: 25px;
@@ -8,11 +15,189 @@
     width:100%;
     justify-content:space-between;
     border-bottom: 1px solid rgba(128, 128, 128, 0.514)
-}
+}  
 
 .big-container{
     display:flex;
     justify-content:space-between;
     align-items:center;
-    margin-bottom:20px
+    margin-bottom:35px
+}
+.detail-nav{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.big-detail{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center
+}
+
+.detail-nav{
+    display: flex;
+    align-items: flex-end;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    padding: 0px 2rem;
+    position: relative;
+}
+
+.nav-det{
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    display: inline-block;
+    max-width: 25rem;
+    position: relative;
+}
+
+.detail-btn1{
+    position: relative;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    overflow: visible;
+    padding-bottom: 5px;
+    border-bottom: 0.1rem solid rgb(221, 221, 221);
+    width: 100%;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.detail-btn2{
+    position: relative;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    overflow: visible;
+    padding-bottom: 5px;
+    border-bottom: 0.1rem solid rgb(221, 221, 221);
+    width: 100%;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.detail-btn3{
+    position: relative;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    overflow: visible;
+    padding-bottom: 5px;
+    border-bottom: 0.1rem solid rgb(221, 221, 221);
+    width: 100%;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.detail-btn4{
+    position: relative;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-image: initial;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    cursor: pointer;
+    overflow: visible;
+    padding-bottom: 5px;
+    border-bottom: 0.1rem solid rgb(221, 221, 221);
+    width: 100%;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.line-text{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid gray 1px;
+    margin-bottom: 15px;
+}
+
+.lines{
+    width: 50%;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.main-menu{
+    display: flex;
+    margin-right: 45px;
+    margin-left: 40px
+}
+
+.detail-text{
+    margin-top: 30px;
+
+}
+
+.menu-text{
+    width: 50%;
+    justify-content: space-between;
+    font-size: 15px;
+    margin-right: 40px;
+    margin-top: 25px;
+    position: absolute
+}
+
+.gray-text{
+    color: gray;
+}
+
+.detail-btn1:hover{
+    border-bottom: black solid 1px;
+}
+
+.detail-btn1::after{
+    position: absolute;
+    display: block;
+    height: 29px;
+    width: 100%
+}
+
+.detail-btn2:hover{
+    border-bottom: black solid 1px;
+}
+
+.detail-btn3:hover{
+    border-bottom: black solid 1px;
+}
+
+.detail-btn4:hover{
+    border-bottom: black solid 1px;
 }
